--- a/src/s2-homeworks/hw06/common/c4-SuperEditableSpan/SuperEditableSpan.module.css
+++ b/src/s2-homeworks/hw06/common/c4-SuperEditableSpan/SuperEditableSpan.module.css
@@ -1,10 +1,27 @@
 .spanBlock {
+    display: flex;
+    align-items: center;
+    gap: 10px;
 }
 
 .span {
+    color: #0080FF;
+
+    font-family: Montserrat;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: normal;
 }
 
 .input {
+    display: flex;
+    min-width: 276px;
+    justify-content: center;
+    align-items: center;
+    flex-shrink: 0;
+    padding: 10px 25px;
+    border-radius: 5px;
+    border: 1px solid #D1D1D1;
 }
 
 .pen {
