--- a/src/s2-homeworks/hw06/HW6.module.css
+++ b/src/s2-homeworks/hw06/HW6.module.css
@@ -1,5 +1,9 @@
 .buttonsContainer {
+    display: flex;
+    align-items: center;
+    gap: 24px;
 }
 
 .editableSpanContainer {
+    padding: 30px 0 22px;
 }
