--- a/src/s1-main/App.module.css
+++ b/src/s1-main/App.module.css
@@ -7,5 +7,10 @@
 }
 
 .hwTitle {
-
+    color: #000;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    padding: 30px 10px;
 }
