--- a/src/s2-homeworks/hw07/common/c5-SuperSelect/SuperSelect.module.css
+++ b/src/s2-homeworks/hw07/common/c5-SuperSelect/SuperSelect.module.css
@@ -1,9 +1,21 @@
 .select {
+    min-width: 165px;
+    min-height: 24px;
+    flex-shrink: 0;
+    border-radius: 2px;
+    border: 1px solid #C2C2C2;
+transition: all 0.3s ease;
+    background: #FFF;
 }
 
 .select:focus {
+    border-radius: 2px;
+    border: 1px solid #000;
+
+    background: #FFF;
 }
 
 
 .option:hover {
+    background: #1E90FF;
 }
