--- a/src/s2-homeworks/hw07/common/c6-SuperRadio/SuperRadio.module.css
+++ b/src/s2-homeworks/hw07/common/c6-SuperRadio/SuperRadio.module.css
@@ -1,4 +1,5 @@
 .radio {
+
 }
 
 .radio::before {
@@ -9,7 +10,13 @@
 }
 
 .label {
+    display: flex;
+    align-items: center;
+    gap: 13px;
 }
 
 .options {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
 }
